--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ which = { workspace = true }
 [workspace.dependencies]
 serde = { version = "1.0.160", features = ["derive"] }
 clap = { version = "4.2.1", features = ["derive"] }
+clap_complete = "4.2.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 thiserror = "1.0.40"
