Add dotenvy to load .env files

--- a/bins/stackctl/Cargo.toml
+++ b/bins/stackctl/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 clap_complete = { workspace = true }
 thiserror = { workspace = true }
 stackable = { path = "../../" }
+dotenvy = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true }
 
