--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,6 @@ clap_complete = "4.2.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 thiserror = "1.0.40"
+dotenvy = "0.15.7"
 anyhow = "1.0.70"
 which = "4.4.0"
