--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde_yaml = { workspace = true }
 thiserror = { workspace = true }
 which = { workspace = true }
+serde = { workspace = true }
 
 [workspace.dependencies]
+tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
+reqwest = { version = "0.11.16", features = ["native-tls"] }
 serde = { version = "1.0.160", features = ["derive"] }
 clap = { version = "4.2.1", features = ["derive"] }
 clap_complete = "4.2.0"
+lazy_static = "1.4.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 thiserror = "1.0.40"
