--- a/bins/stackctl/Cargo.toml
+++ b/bins/stackctl/Cargo.toml
@@ -8,10 +8,13 @@ path = "src/main.rs"
 
 [dependencies]
 clap_complete = { workspace = true }
+lazy_static = { workspace = true }
 thiserror = { workspace = true }
 stackable = { path = "../../" }
 dotenvy = { workspace = true }
+reqwest = { workspace = true }
 anyhow = { workspace = true }
+tokio = { workspace = true }
 clap = { workspace = true }
 
 
