Continue stack / demo implementations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 [dependencies]
 serde_yaml = { workspace = true }
 thiserror = { workspace = true }
+reqwest = { workspace = true }
 which = { workspace = true }
 serde = { workspace = true }
 url = { workspace = true }
