--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2021"
 serde_yaml = { workspace = true }
 thiserror = { workspace = true }
 reqwest = { workspace = true }
+tracing = { workspace = true }
 which = { workspace = true }
 serde = { workspace = true }
 url = { workspace = true }
@@ -23,12 +24,14 @@ tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11.16", features = ["native-tls"] }
 serde = { version = "1.0.160", features = ["derive"] }
 clap = { version = "4.2.1", features = ["derive"] }
+tracing-subscriber = "0.3.17"
 clap_complete = "4.2.0"
 lazy_static = "1.4.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 thiserror = "1.0.40"
 dotenvy = "0.15.7"
+tracing = "0.1.37"
 anyhow = "1.0.70"
 which = "4.4.0"
 url = "2.3.1"
