--- a/bins/stackctl/Cargo.toml
+++ b/bins/stackctl/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 path = "src/main.rs"
 
 [dependencies]
+tracing-subscriber = { workspace = true }
 clap_complete = { workspace = true }
 lazy_static = { workspace = true }
 serde_json = { workspace = true }
@@ -15,6 +16,7 @@ thiserror = { workspace = true }
 stackable = { path = "../../" }
 dotenvy = { workspace = true }
 reqwest = { workspace = true }
+tracing = { workspace = true }
 anyhow = { workspace = true }
 tokio = { workspace = true }
 clap = { workspace = true }
