--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 [dependencies]
 serde_yaml = { workspace = true }
 thiserror = { workspace = true }
+indexmap = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
 which = { workspace = true }
@@ -23,6 +24,7 @@ url = { workspace = true }
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11.16", features = ["native-tls"] }
 serde = { version = "1.0.160", features = ["derive"] }
+indexmap = { version = "1.9.3", features = ["serde"] }
 clap = { version = "4.2.1", features = ["derive"] }
 tracing-subscriber = "0.3.17"
 clap_complete = "4.2.0"
