Add initial support for local file caching

--- a/bins/stackctl/Cargo.toml
+++ b/bins/stackctl/Cargo.toml
@@ -20,6 +20,5 @@ tracing = { workspace = true }
 anyhow = { workspace = true }
 tokio = { workspace = true }
 clap = { workspace = true }
+xdg = { workspace = true }
 comfy-table = "6.1.4"
-
-
