--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-trait = { workspace = true }
 serde_yaml = { workspace = true }
 thiserror = { workspace = true }
 indexmap = { workspace = true }
@@ -28,6 +29,7 @@ indexmap = { version = "1.9.3", features = ["serde"] }
 clap = { version = "4.2.1", features = ["derive"] }
 tracing-subscriber = "0.3.17"
 clap_complete = "4.2.0"
+async-trait = "0.1.68"
 lazy_static = "1.4.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
