--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ which = { workspace = true }
 serde = { workspace = true }
 url = { workspace = true }
 
+[build-dependencies]
+gobuild = "0.1.0-alpha.1"
+
 [workspace.dependencies]
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11.16", features = ["native-tls"] }
