Add details about tackabled tech stack to README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ thiserror = "1.0.40"
 dotenvy = "0.15.7"
 tracing = "0.1.37"
 anyhow = "1.0.70"
+utoipa = "3.3.0"
 axum = "0.6.18"
 which = "4.4.0"
 url = "2.3.1"
