Add 'openapi' feature to stackable lib and stackabled deps

--- a/bins/stackabled/Cargo.toml
+++ b/bins/stackabled/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 axum = { workspace = true, features = ["http2", "headers"] }
+stackable = { path = "../../", features = ["openapi"] }
 clap = { workspace = true, features = ["env"] }
-stackable = { path = "../../" }
 tracing = { workspace = true }
 utoipa = { workspace = true }
 anyhow = { workspace = true }
