--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ name = "stackable"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+full = ["openapi"]
+openapi = []
+
 [dependencies]
 async-trait = { workspace = true }
 serde_json = { workspace = true }
@@ -18,6 +22,7 @@ thiserror = { workspace = true }
 indexmap = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
+utoipa = { workspace = true }
 which = { workspace = true }
 serde = { workspace = true }
 url = { workspace = true }
