--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ serde = { version = "1.0.160", features = ["derive"] }
 indexmap = { version = "1.9.3", features = ["serde"] }
 clap = { version = "4.2.1", features = ["derive"] }
 tracing-subscriber = "0.3.17"
+utoipa-swagger-ui = "3.1.3"
 clap_complete = "4.2.0"
 async-trait = "0.1.68"
 lazy_static = "1.4.0"
