--- a/bins/stackabled/web-ui/package.json
+++ b/bins/stackabled/web-ui/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "typescript": "^5.0.2",
+    "unocss": "^0.51.8",
     "vite": "^4.3.2",
     "vite-plugin-solid": "^2.7.0"
   },
