--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ openapi = []
 async-trait = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
-thiserror = { workspace = true }
 indexmap = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
 utoipa = { workspace = true }
+snafu = { workspace = true }
 which = { workspace = true }
 serde = { workspace = true }
 url = { workspace = true }
@@ -43,12 +43,11 @@ async-trait = "0.1.68"
 lazy_static = "1.4.0"
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
-thiserror = "1.0.40"
 dotenvy = "0.15.7"
 tracing = "0.1.37"
-anyhow = "1.0.70"
 utoipa = "3.3.0"
 axum = "0.6.18"
+snafu = "0.7.4"
 which = "4.4.0"
 url = "2.3.1"
 xdg = "2.4.1"
