--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-phf = "0.11.1"
+phf = { workspace = true }
 
 [build-dependencies]
-phf_codegen = "0.11.1"
+phf_codegen = { workspace = true }
