--- a/web/package.json
+++ b/web/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src"
   },
   "devDependencies": {
+    "@techassi/eslint-config-solid": "^0.1.1",
+    "eslint": "^8.40.0",
+    "eslint-plugin-solid": "^0.12.1",
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
     "vite": "^4.3.2",
