--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
   "bins/*",
+  "web",
   "xtask",
   "."
 ]
@@ -51,3 +52,5 @@ snafu = "0.7.4"
 which = "4.4.0"
 url = "2.3.1"
 xdg = "2.4.1"
+phf = "0.11.1"
+phf_codegen = "0.11.1"
