--- a/bins/stackabled/Cargo.toml
+++ b/bins/stackabled/Cargo.toml
@@ -3,6 +3,11 @@ name = "stackabled"
 version = "0.0.1"
 edition = "2021"
 
+[features]
+default = []
+# The UI builds slowly, so run in API-only mode during development
+ui = ["dep:stackabled-web"]
+
 [dependencies]
 utoipa-swagger-ui = { workspace = true, features = ["axum"] }
 axum = { workspace = true, features = ["http2", "headers"] }
@@ -12,3 +17,4 @@ clap = { workspace = true, features = ["env"] }
 tracing = { workspace = true }
 snafu = { workspace = true }
 tokio = { workspace = true }
+stackabled-web = { path = "../../web", optional = true }
