--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,7 +20,7 @@
     "noFallthroughCasesInSwitch": true,
 
     "jsx": "preserve",
-    "jsxImportSource": "solid-js",
+    "jsxImportSource": "solid-js"
   },
   "include": ["src"]
 }
