--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@techassi/eslint-config-solid": "^0.1.1",
     "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-solid": "^0.12.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
