Use eslint-plugin-solid directly rather than pulling in @techassi metaconfig

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -1,3 +1,14 @@
 {
-  "extends": ["@techassi/solid", "prettier"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:solid/typescript",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": true
+  },
+  "plugins": ["@typescript-eslint", "solid"]
 }
