--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 dotenvy = "0.15.7"
 tracing = "0.1.37"
+semver = "1.0.17"
 utoipa = "3.3.0"
 axum = "0.6.18"
 snafu = "0.7.4"
