--- a/bins/stackablectl/Cargo.toml
+++ b/bins/stackablectl/Cargo.toml
@@ -12,10 +12,12 @@ clap_complete = { workspace = true }
 lazy_static = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
+indexmap = { workspace = true }
 stackable = { path = "../../" }
 dotenvy = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
+semver = { workspace = true }
 snafu = { workspace = true }
 tokio = { workspace = true }
 clap = { workspace = true }
