Re-enable eslint-plugin-unicorn

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -4,11 +4,23 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:solid/typescript",
+    "plugin:unicorn/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": true
   },
-  "plugins": ["@typescript-eslint", "solid"]
+  "plugins": ["@typescript-eslint", "solid", "unicorn"],
+  "rules": {
+    "unicorn/prevent-abbreviations": [
+      "error",
+      {
+        "replacements": {
+          "props": false,
+          "env": false
+        }
+      }
+    ]
+  }
 }
