--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-solid": "^0.12.1",
+    "eslint-plugin-unicorn": "^47.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
