--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,19 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src"
+    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src",
+    "prepare": "cd .. && husky install web/.husky"
   },
   "devDependencies": {
-    "@techassi/eslint-config-solid": "^0.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-solid": "^0.12.1",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
     "vite": "^4.3.2",
@@ -22,5 +29,8 @@
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
     "solid-js": "^1.7.4"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
