--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -192,29 +192,29 @@ jobs:
   # Similar to check_charts, this tries to render the README, and see if there are unintended changes.
   # This will save us from merging changes to the wrong file (instead of the templated source), and from
   # forgetting to render out modifications to the README.
-  check_readme:
-    name: Check if committed README is the one we would render from the available parts
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-        with:
-          submodules: recursive
-      - uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435 # v4
-        with:
-          python-version: '3.10'
-      - name: Install jinja2-cli
-        run: pip install jinja2-cli==0.8.2
-      - name: Regenerate charts
-        run: make render-readme
-      - name: Check if committed README were up to date
-        run: git diff --exit-code
-      - name: Git Diff showed uncommitted changes
-        if: ${{ failure() }}
-        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
-        with:
-          script: |
-            core.setFailed('Committed README are not up to date, please make sure to apply them to the templated partials, and re-commit!')
+  # check_readme:
+  #   name: Check if committed README is the one we would render from the available parts
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+  #       with:
+  #         submodules: recursive
+  #     - uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435 # v4
+  #       with:
+  #         python-version: '3.10'
+  #     - name: Install jinja2-cli
+  #       run: pip install jinja2-cli==0.8.2
+  #     - name: Regenerate charts
+  #       run: make render-readme
+  #     - name: Check if committed README were up to date
+  #       run: git diff --exit-code
+  #     - name: Git Diff showed uncommitted changes
+  #       if: ${{ failure() }}
+  #       uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
+  #       with:
+  #         script: |
+  #           core.setFailed('Committed README are not up to date, please make sure to apply them to the templated partials, and re-commit!')
 
   # This job cleans up the CRDs and Helm charts, followed by rebuilding them
   # It then runs a `git diff` and fails the entire workflow, if any difference is encountered.
