--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -4,6 +4,7 @@ on: pull_request
 
 jobs:
   build-web:
+    name: Web frontend built
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
