--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -13,3 +13,20 @@ jobs:
           version: 7.26.1
           run_install: true
       - run: cd web && pnpm run build
+
+  prettier:
+    name: Validate web formatting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # v2.2.4
+        with:
+          version: 7.26.1
+          run_install: true
+      - run: cd web && pnpm prettier . --check
+      - name: Git Diff showed uncommitted changes
+        if: ${{ failure() }}
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
+        with:
+          script: |
+            core.setFailed('web/ contains unformatted code, run `pnpm prettier . --write` and re-commit!')
