--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           version: 7.26.1
           run_install: true
-      - run: cd web && pnpm run build
+      - run: pnpm --filter web-ui run build
 
   prettier:
     name: Validate web formatting
@@ -23,7 +23,7 @@ jobs:
         with:
           version: 7.26.1
           run_install: true
-      - run: cd web && pnpm prettier . --check
+      - run: pnpm --filter web-ui run format --check
       - name: Git Diff showed uncommitted changes
         if: ${{ failure() }}
         uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
