--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src"
+    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src",
+    "format": "prettier ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
