--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ full = ["openapi"]
 openapi = []
 
 [dependencies]
+tokio = { workspace = true, features = ["process"] }
 k8s-openapi = { workspace = true }
 async-trait = { workspace = true }
 serde_json = { workspace = true }
