Add operator commands (#11)
* Finish demo install flow

* Add operator list command

* Improve operator listing functions

* Add YAML and JSON output to operator list command

* Add operator describe command

* Start operator install command

* Add operator install command

* Define operator_name in a central place

* Add operator installed / ls -i command

* Clippy pass

* Fix clippy warnings

* Fix failing test

* Add first round of requested changes

This commit addresses:

- https://github.com/stackabletech/stackable/pull/11#discussion_r1194807249
- https://github.com/stackabletech/stackable/pull/11#discussion_r1194839321
- https://github.com/stackabletech/stackable/pull/11#discussion_r1194849046
- https://github.com/stackabletech/stackable/pull/11#discussion_r1194849297

* Rename --namespace arg to --operators-namespace

* Rename --operators-namespace to --operator-namespace

* Adjust OperatorCmdError variants

* Remove {source} from error variant `Display`

* Add second round of requested changed

This commit addresses:

- https://github.com/stackabletech/stackable/pull/11#discussion_r1195135172
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195136932
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195149302
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195149532
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195152677
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195153450
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195153628
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195154065
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195154707
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195157632
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195158428

* Remove `operator ls -i` shortcut

* Add errors when the user provides invalid cluster node counts

* Remove pluralize 

--- a/bins/stackablectl/Cargo.toml
+++ b/bins/stackablectl/Cargo.toml
@@ -12,12 +12,16 @@ clap_complete = { workspace = true }
 lazy_static = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
+indexmap = { workspace = true }
 stackable = { path = "../../" }
 dotenvy = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
+semver = { workspace = true }
 snafu = { workspace = true }
 tokio = { workspace = true }
+serde = { workspace = true }
 clap = { workspace = true }
 xdg = { workspace = true }
 comfy-table = "6.1.4"
+indicatif = "0.17.3"
