Also run the web build on bors branches

--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -1,6 +1,15 @@
 ---
 name: web
-on: pull_request
+on:
+  push:
+    branches:
+      - main
+      - staging
+      - trying
+      - "renovate/**"
+    tags:
+      - '[0-9][0-9].[0-9]+.[0-9]+'
+  pull_request:
 
 jobs:
   build-web:
