--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,21 +10,21 @@ members = [
 name = "stackable"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [features]
 full = ["openapi"]
-openapi = []
+openapi = ["dep:utoipa"]
 
 [dependencies]
 tokio = { workspace = true, features = ["process"] }
 k8s-openapi = { workspace = true }
-async-trait = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 indexmap = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
-utoipa = { workspace = true }
+utoipa = { workspace = true, optional = true }
 snafu = { workspace = true }
 which = { workspace = true }
 serde = { workspace = true }
