--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src",
-    "prepare": "cd .. && husky install web/.husky"
+    "format": "prettier ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -17,8 +17,6 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-solid": "^0.12.1",
     "eslint-plugin-unicorn": "^47.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
@@ -29,8 +27,5 @@
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
     "solid-js": "^1.7.4"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
   }
 }
