--- a/web/package.json
+++ b/web/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src",
+    "coverage": "vitest run --coverage",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src",
-    "format": "prettier ."
+    "format": "prettier .",
+    "test": "vitest",
+    "dev": "vite"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -21,7 +23,8 @@
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
     "vite": "^4.3.2",
-    "vite-plugin-solid": "^2.7.0"
+    "vite-plugin-solid": "^2.7.0",
+    "vitest": "^0.31.1"
   },
   "dependencies": {
     "@solidjs/router": "^0.8.2",
