Add a pre-commit hook for updating the openapi client definitions

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 stackablectl = { path = "../bins/stackablectl" }
+stackabled = { path = "../bins/stackabled" }
 clap_complete =  { workspace = true }
 snafu = { workspace = true }
 clap = { workspace = true }
 clap_mangen = "0.2.10"
+serde_json.workspace = true
