--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,3 +55,8 @@ repos:
         language: system
         entry: cargo xtask gen-comp
         stages: [commit, merge-commit, manual]
+      - id: gen-openapi
+        name: gen-openapi
+        language: system
+        entry: cargo xtask gen-openapi | pnpm --filter web-ui run import-openapi-schema
+        stages: [commit, merge-commit, manual]
