--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.ts,.tsx,.jsx,.json ./src",
+    "import-openapi-schema": "openapi-typescript -o src/api/schema.d.ts",
     "format": "prettier ."
   },
   "devDependencies": {
