--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -8,6 +8,6 @@ stackablectl = { path = "../bins/stackablectl" }
 stackabled = { path = "../bins/stackabled" }
 clap_complete =  { workspace = true }
 snafu = { workspace = true }
-clap = { workspace = true }
+clap.workspace = true
 clap_mangen = "0.2.10"
 serde_json.workspace = true
