--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "coverage": "vitest run --coverage",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test:ui": "vitest --ui",
     "format": "prettier .",
     "test": "vitest",
     "dev": "vite"
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "@vitest/coverage-c8": "^0.31.1",
+    "@vitest/ui": "^0.31.1",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-solid": "^0.12.1",
