--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -20,6 +20,10 @@
       {
         "replacements": {
           "env": false,
+          // Err is used for the Result type
+          "err": false,
+          // Fn or fn is used in callbacks, predicate and filter functions
+          "fn": false,
           // props and params are distinct solidjs concepts
           "props": false,
           "params": false
