Take a direct dependency from stackabled on k8s-openapi too

--- a/bins/stackabled/Cargo.toml
+++ b/bins/stackabled/Cargo.toml
@@ -19,3 +19,4 @@ snafu = { workspace = true }
 tokio = { workspace = true }
 stackabled-web = { path = "../../web", optional = true }
 serde.workspace = true
+k8s-openapi.workspace = true
