Fix ESLint errors

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -24,10 +24,16 @@
           "err": false,
           // Fn or fn is used in callbacks, predicate and filter functions
           "fn": false,
-          // props and params are distinct solidjs concepts
+          // props and params are distinct SolidJS concepts
           "props": false,
           "params": false
         }
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
       }
     ]
   }
