--- a/bins/stackabled/Cargo.toml
+++ b/bins/stackabled/Cargo.toml
@@ -18,3 +18,5 @@ tracing = { workspace = true }
 snafu = { workspace = true }
 tokio = { workspace = true }
 stackabled-web = { path = "../../web", optional = true }
+serde.workspace = true
+k8s-openapi.workspace = true
