Add TypeScript helper types (#32)
* Add Result and Option helper types

* Add Vitest and Result type test cases

* Add more utility methods

* Add unwrapErr and expectErr methods

* Add more Option methods

* Add test coverage

* Add remaining Option test cases

* Add remaining Result test cases

* Update web/src/types/result.ts

Co-authored-by: Natalie <nat@nullable.se>

* Re-model Option type

* Fix tsc error in option test

* Add doc comments to Option methods

* Adjust ESLint abbreviation rules

* Add doc comments for Result type

* Simplify Option variant methods since they know the case already

* Some.value can be public, since we're already guaranteed to have a value in that case

* Simplify a few more type definitions

* Fix ESLint errors

* Re-model Result type with subtypes

* Update web/src/types/result.ts

Co-authored-by: Natalie <nat@nullable.se>

* Update web/src/types/result.ts

Co-authored-by: Natalie <nat@nullable.se>

---------

Co-authored-by: Natalie <nat@nullable.se>

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -20,10 +20,20 @@
       {
         "replacements": {
           "env": false,
-          // props and params are distinct solidjs concepts
+          // Err is used for the Result type
+          "err": false,
+          // Fn or fn is used in callbacks, predicate and filter functions
+          "fn": false,
+          // props and params are distinct SolidJS concepts
           "props": false,
           "params": false
         }
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
       }
     ]
   }
