--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ gobuild = "0.1.0-alpha.1"
 [workspace.dependencies]
 kube = { version = "0.82.2", default-features = false, features = ["client", "openssl-tls"] }
 k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
-tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
 reqwest = { version = "0.11.16", features = ["native-tls"] }
 serde = { version = "1.0.160", features = ["derive"] }
 indexmap = { version = "1.9.3", features = ["serde"] }
