--- a/bins/stackabled/Cargo.toml
+++ b/bins/stackabled/Cargo.toml
@@ -20,3 +20,6 @@ tokio = { workspace = true }
 stackabled-web = { path = "../../web", optional = true }
 serde.workspace = true
 k8s-openapi.workspace = true
+tower-http = { version = "0.4.1", features = ["validate-request"] }
+bcrypt = "0.14.0"
+uuid = { version = "1.4.0", features = ["v4"] }
