--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -30,6 +30,13 @@
         }
       }
     ],
+    // foo(undefined) is not always equivalent to foo()
+    "unicorn/no-useless-undefined": [
+      "error",
+      {
+        "checkArguments": false
+      }
+    ],
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
