--- a/deploy/helm/stackable-cockpit/templates/deployment.yaml
+++ b/deploy/helm/stackable-cockpit/templates/deployment.yaml
@@ -31,6 +31,9 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ include "operator.appname" . }}
+          env:
+            - name: STACKABLED_HTPASSWD_PATH
+              value: /etc/stackable/{{ include "operator.appname" . }}/credentials/htpasswd
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -40,6 +43,8 @@ spec:
           volumeMounts:
             - mountPath: /etc/stackable/{{ include "operator.appname" . }}/config-spec
               name: config-spec
+            - mountPath: /etc/stackable/{{ include "operator.appname" . }}/credentials
+              name: credentials
           ports:
             - name: http
               containerPort: 8000
@@ -47,6 +52,9 @@ spec:
         - name: config-spec
           configMap:
             name: {{ include "operator.fullname" . }}-configmap
+        - name: credentials
+          secret:
+            secretName: {{ include "operator.fullname" . }}-credentials
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
